--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>GIT VSCODE</title>
 </head>
 <body>
-    
+    <!-- Div contenedor prueba -->
+    div <div class="contenedor">
+        div <div class="segundo">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, harum, sapiente magnam excepturi quo laborum magni ratione ex accusantium fuga eum incidunt cumque facilis? Nulla dolorem sequi sint eveniet odit!</p>
+        </div>
+    </div>
 </body>
 </html>
