--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GIT VSCODE</title>
 </head>
 <body>
-    <!-- Div contenedor prueba -->
+    <!-- Div contenedor prueba 2-->
     div <div class="contenedor">
         div <div class="segundo">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, harum, sapiente magnam excepturi quo laborum magni ratione ex accusantium fuga eum incidunt cumque facilis? Nulla dolorem sequi sint eveniet odit!</p>
