--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIT VSCODE</title>
+    <title>FRAGANCIA T</title>
 </head>
 <body>
-    <!-- Div contenedor prueba 4-->
-    div <div class="contenedor">
-        div <div class="segundo">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, harum, sapiente magnam excepturi quo laborum magni ratione ex accusantium fuga eum incidunt cumque facilis? Nulla dolorem sequi sint eveniet odit!</p>
-        </div>
-    </div>
+    
 </body>
 </html>
