--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <header>
-            <h2>FRAGANCIA T</h2>
-            
-        </header>
-    </main>
+    <div class="main-container bg-dark-black">
+
+    </div>
+
 </body>
 </html>
-
-
-esta es otra prueba de git desde la computadora de 'ale'
-esto es una prueba desde mi computadora
