edicion de Alejando

--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRAGANCIA T</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="main-container bg-dark-black">
+    <main>
+        <header style="text-align: center;">
+            <div id="fondo">
+            </div>
+        </header>
+    </main>
 
+    <br>
+    <div id="encabezado_catalogo">
+        <hr>
+        <h2>CATALOGOS</h2>
+        <hr>
     </div>
-
+    <div class="catalogo">
+        <fieldset> <h3>Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></fieldset>
+        <fieldset> <h3>Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></fieldset>
+        <fieldset> <h3>Catalogo de Niños</h3><img src="imagenes/chamaco.png" alt="archivo no encontrado"></fieldset>
+    </div>
+    <div id="encabezado_catalogo">
+        <hr id="hr">
+        <h2>Productos mas populares</h2>
+        <hr id="hr">
+    </div>
+    <div class="catalogo">
+        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/perfume4.png" alt="archivo no encontrado"><br><br>Nombre: POISON<br><br>Descripcion: Perfume para la mujer mas delicada<br><br>Precio: $30.90<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/perfume1.png" alt="archivo no encontrado"><br><br>Nombre: POSSESS<br><br>Descripcion: Perfume que realaza tu atractivo<br><br>Precio: $35.70<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/perfume6.png" alt="archivo no encontrado"><br><br>Nombre: GIVENCHY<br><br>Descripcion: Perfume que realaza tu hombria<br><br>Precio: $36.50<br><br><button>Comprar</button></fieldset>
+    </div>
 </body>
 </html>
+
