--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRAGANCIA T</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <main>
@@ -21,9 +21,9 @@
         <hr>
     </div>
     <div class="catalogo">
-        <fieldset> <h3>Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></fieldset>
-        <fieldset> <h3>Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></fieldset>
-        <fieldset> <h3>Catalogo de Niños</h3><img src="imagenes/chamaco.png" alt="archivo no encontrado"></fieldset>
+        <fieldset><a href="catalogo_hombre.html"><h3>Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a></fieldset>
+        <fieldset><a href="catalogo_mujeres.html"><h3>Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a></fieldset>
+        <fieldset><a href="catalogo_chamacos.html"><h3>Catalogo de Niños</h3><img src="imagenes/chamaco.png" alt="archivo no encontrado"></a></fieldset>
     </div>
     <div id="encabezado_catalogo">
         <hr id="hr">
