eliminado jmbb.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <fieldset><img src="imagenes/perfume1.png" alt="archivo no encontrado"><br><br>Nombre: POSSESS<br><br>Descripcion: Perfume que realaza tu atractivo<br><br>Precio: $35.70<br><br><button>Comprar</button></fieldset>
         <fieldset><img src="imagenes/perfume6.png" alt="archivo no encontrado"><br><br>Nombre: GIVENCHY<br><br>Descripcion: Perfume que realaza tu hombria<br><br>Precio: $36.50<br><br><button>Comprar</button></fieldset>
     </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
 
