--- a/catalogo_mujeres.html
+++ b/catalogo_mujeres.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalago de Hombres</title>
-    <link rel="stylesheet" href="css/catalogo_mujeres.css">
+    <title>Catalago de Mujeres</title>
+    <link rel="stylesheet" href="css/catalogo_hombre.css">
 </head>
-<body>
-    <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+<body bgcolor="pink">
+    <div id="division_catalogo">
+        <hr id="hrch">
+        <h1>Bienvenid@ al catalogo de mujeres</h1>
+        <hr id="hrch">
     </div>
     <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m4.png" alt="archivo no encontrado"><br><br>Nombre: Éxtasis de Jazmín Nocturno<br><br>Descripcion:  Una fragancia sensual y enigmática que evoca la magia de la noche. Con notas de jazmín, sándalo y ámbar, esta loción despierta los sentidos y seduce con su misteriosa profundidad. 100ml<br><br>Precio: $12.99<br><br><button style="margin-top: 14%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m5.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Rosas Encantadas<br><br>Descripcion: Esta loción captura la esencia de un jardín de rosas en plena floración, con notas suaves y seductoras que envuelven la piel con un aroma romántico y encantador. 50ml<br><br>Precio: $9.99<br><br><button style="margin-top: 14%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m6.png" alt="archivo no encontrado"><br><br>Nombre: Melodía de Lavanda Serena<br><br>Descripcion:  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br>Precio: $14.99<br><br><button>Comprar</button></fieldset>
     </div>
     <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m7.png" alt="archivo no encontrado"><br><br>Nombre: Suspiro de Cerezas Rosadas<br><br>Descripcion:  Una fragancia dulce y juguetona que evoca la delicadeza de las flores de cerezo en primavera, con notas frescas y afrutadas que inspiran alegría y juventud. 100ml<br><br>Precio: $16.99<br><br><button style="margin-top: 7%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m8.png" alt="archivo no encontrado"><br><br>Nombre: Encanto de Orquídeas<br><br>Descripcion: Una fragancia ligera y efervescente que evoca la sensación de libertad y alegría de ver mariposas revolotear en un jardín soleado, con notas frescas y chispeantes que despiertan los sentidos. 100ml<br><br>Precio: $14.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m9.png" alt="archivo no encontrado"><br><br>Nombre: Rocío de Mariposas Doradas<br><br>Descripcion: Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br>Precio: $8.99<br><br><button>Comprar</button></fieldset>
+    </div>
+    <div id="division_catalogo">
+        <hr>
+        <h1>Promociones</h1>
+        <hr>
     </div>
     <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m1.png" alt="archivo no encontrado"><br><br>Nombre: Coco Mademoiselle<br><br>Descripcion: Una fragancia clásica y atemporal que encarna la elegancia y el encanto femenino. Con notas de bergamota, rosa y vainilla, esta loción es perfecta para una mujer sofisticada y segura de sí misma. 50ml<br><br>Precio: $6.99<br><br>Promocion: 3 X $18.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m2.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion mujeres/locion m3.png" alt="archivo no encontrado"><br><br>Nombre: Aroma de Luna Plateada<br><br>Descripcion: Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br>Precio: $14.99<br><br>Promocion: 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br><button>Comprar</button></fieldset>
     </div>
 </body>
 </html>
