--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header style="text-align: center;">
             <div id="fondo">
+                <img src="imagenes/logo_empresa.jpg" alt="archivo no cargado con exito" style="width: 100%; height: 600px;">
             </div>
         </header>
     </main>
@@ -21,9 +22,9 @@
         <hr>
     </div>
     <div class="catalogo">
-        <fieldset><a href="catalogo_hombre.html"><h3>Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a></fieldset>
-        <fieldset><a href="catalogo_mujeres.html"><h3>Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a></fieldset>
-        <fieldset><a href="catalogo_chamacos.html"><h3>Catalogo de Niños</h3><img src="imagenes/chamaco.png" alt="archivo no encontrado"></a></fieldset>
+        <fieldset id="fieldset"><a href="catalogo_hombre.html"><h3>Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a></fieldset>
+        <fieldset id="fieldset"><a href="catalogo_mujeres.html"><h3>Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a></fieldset>
+        <fieldset id="fieldset"><a href="catalogo_chamacos.html"><h3>Catalogo de Niños</h3><img src="imagenes/chamaco.png" alt="archivo no encontrado"></a></fieldset>
     </div>
     <div id="encabezado_catalogo">
         <hr id="hr">
@@ -31,10 +32,10 @@
         <hr id="hr">
     </div>
     <div class="catalogo">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume4.png" alt="archivo no encontrado"><br><br>Nombre: POISON<br><br>Descripcion: Perfume para la mujer mas delicada<br><br>Precio: $30.90<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume1.png" alt="archivo no encontrado"><br><br>Nombre: POSSESS<br><br>Descripcion: Perfume que realaza tu atractivo<br><br>Precio: $35.70<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume6.png" alt="archivo no encontrado"><br><br>Nombre: GIVENCHY<br><br>Descripcion: Perfume que realaza tu hombria<br><br>Precio: $36.50<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/locion hombres/losion11.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $14.99<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/locion mujeres/locion m5.png" alt="archivo no encontrado"><br><br>Nombre: POISON<br><br>Descripcion: Perfume para la mujer mas delicada<br><br>Precio: $15.99<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/locion mujeres/locion m9.png" alt="archivo no encontrado"><br><br>Nombre: POSSESS<br><br>Descripcion: Perfume que realaza tu atractivo<br><br>Precio: $15.50<br><br><button>Comprar</button></fieldset>
+        <fieldset><img src="imagenes/img-niños/l15.png" alt="archivo no encontrado"><br><br>Nombre: GIVENCHY<br><br>Descripcion: Perfume para el mas lindo del hogar<br><br>Precio: $10.50<br><br><button>Comprar</button></fieldset>
     </div>
     <footer>
         
