--- a/catalogo_hombre.html
+++ b/catalogo_hombre.html
@@ -6,26 +6,31 @@
     <title>Catalago de Hombres</title>
     <link rel="stylesheet" href="css/catalogo_hombre.css">
 </head>
-<body>
-    <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+<body bgcolor="gray">
+    <div id="division_catalogo">
+        <hr id="hrch">
+        <h1>Bienvenid@ al catalogo de hombres</h1>
+        <hr id="hrch">
     </div>
     <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion5.png" alt="archivo no encontrado"><br><br>Nombre: Armonía Silvestre<br><br>Descripcion: Una fragancia natural y reconfortante que te transporta a un bosque encantado, donde la vida fluye en perfecta armonía. 100ml<br><br>Precio: $12.99<br><br><button style="margin-top: 10%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion6.png" alt="archivo no encontrado"><br><br>Nombre: Esencia del Bosque<br><br>Descripcion: Una loción que captura la esencia misma del bosque, con sus aromas frescos y terrosos que te transportan a un mundo de naturaleza salvaje y misteriosa. 50ml<br><br>Precio: $9.99<br><br><button style="margin-top: 3%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion8.png" alt="archivo no encontrado"><br><br>Nombre: Aliento del Océano<br><br>Descripcion: Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br>Precio: $14.99<br><br><button style="margin-top: 10%;">Comprar</button></fieldset>
     </div>
     <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion9.png" alt="archivo no encontrado"><br><br>Nombre: Canto de las Montañas<br><br>Descripcion: Una loción que evoca la majestuosidad y serenidad de las montañas, con sus aromas frescos y herbáceos que te transportan a lo alto de las cumbres nevadas. 100ml<br><br>Precio: $16.99<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion10.png" alt="archivo no encontrado"><br><br>Nombre: Aura de Cielo<br><br>Descripcion: Una fragancia etérea y celestial que te envuelve en la suavidad y luminosidad del cielo. 50ml<br><br>Precio: $8.99<br><br><button style="margin-top: 7%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion11.png" alt="archivo no encontrado"><br><br>Nombre: Serenata Nocturna<br><br>Descripcion: Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br>Precio: $8.99<br><br><button>Comprar</button></fieldset>
+    </div>
+    <div id="division_catalogo">
+        <hr>
+        <h1>Promociones</h1>
+        <hr>
     </div>
     <div class="contenedor">
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
-        <fieldset><img src="imagenes/perfume7.png" alt="archivo no encontrado"><br><br>Nombre: AZZARO<br><br>Descripcion: Perfume para hombres con agallas<br><br>Precio: $39.40<br><br><button>Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion1.png" alt="archivo no encontrado"><br><br>Nombre: Bruma de Ensueño<br><br>Descripcion: Una fragancia misteriosa y envolvente que evoca la sensación de estar inmerso en un sueño encantado. 100ml<br><br>Precio: $12.99<br><br>Promocion: 3 X $30.99<br><br><button style="margin-top: 14%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion3.png" alt="archivo no encontrado"><br><br>Nombre: Fragancia de Luna<br><br>Descripcion: Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br><button style="margin-top:22%;">Comprar</button></fieldset>
+        <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion4.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br>Precio: $14.99<br><br>Promocion: Locion + Frasco X $24.99<br><br><button>Comprar</button></fieldset>
     </div>
 </body>
 </html>
