--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="ejemplo1.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fieldset con color de fondo</title>
+<style>
+  /* Estilo para el fieldset */
+  fieldset {
+    background-color: #f0f0f0; /* Color de fondo */
+    padding: 20px; /* Espaciado interno */
+    border: none; /* Quitamos el borde predeterminado */
+    border-radius: 10px; /* Añadimos bordes redondeados */
+  }
+
+  /* Estilo para el texto legend */
+  legend {
+    font-weight: bold; /* Texto en negrita */
+    color: #333; /* Color del texto */
+  }
+</style>
 </head>
-<body>
-    <div class="contenedor">
-        <div class="contenido">
-          <!-- Contenido horizontal -->
-          <div class="item">Item 1</div>
-          <div class="item">Item 2</div>
-          <div class="item">Item 3</div>
-          <div class="item">Item 4</div>
-          <div class="item">Item 5</div>
-          <div class="item">Item 6</div>
-          <!-- Agrega más elementos según sea necesario -->
-        </div>
-    </div>      
+<body bgcolor="pink">
+
+<!-- Aquí creamos el fieldset -->
+<fieldset>
+  <!-- El elemento legend define un título para el fieldset -->
+  <legend>Información personal</legend>
+  <!-- Aquí irían los elementos del formulario -->
+  <label for="nombre">Nombre:</label>
+  <input type="text" id="nombre" name="nombre">
+  <br>
+  <label for="apellido">Apellido:</label>
+  <input type="text" id="apellido" name="apellido">
+</fieldset>
+
 </body>
 </html>
