--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalago de Hombres</title>
+    <title>Catalago de niños</title>
     <link rel="stylesheet" href="css/catalogo_chamacos.css">
 </head>
 <body background="imagenes/fondo-acuarela-azul-rosa.avif" style="background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
