--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalago de niños</title>
     <link rel="stylesheet" href="css/catalogo_chamacos.css">
+    <link rel="icon" href="imagenes/logo-mejorado.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&family=Great+Vibes&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body background="imagenes/fondo-acuarela-azul-rosa.avif" style="background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
+    <header > <!-- style="text-align: center;" -->
+        <nav>
+            <h1>Fragancia T</h1>
+            <ul class="menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li>
+                    <a>Catalogos</a>
+                    <ul class="submenu">
+                        <li><a href="catalogo_hombre.html">Hombres</a></li>
+                        <li><a href="catalogo_mujeres.html">Mujeres</a></li>
+                        <li><a href="catalogo_chamacos.html">Niños</a></li>
+                    </ul>
+                </li>
+                <li><a>Sobre Nosotros</a></li>
+                <li><a>Contactanos</a></li>
+            </ul>
+        </nav>
+    </header>
+    
     <div id="division_catalogo">
         <hr id="hrch">
         <h1>Bienvenid@ al catalogo de niñ@s</h1>
