--- a/index.html
+++ b/index.html
@@ -5,15 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRAGANCIA T</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="imagenes/logo-mejorado.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&family=Great+Vibes&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <header style="text-align: center;">
-            <div id="fondo">
-                <img src="imagenes/logo_empresa.jpg" alt="archivo no cargado con exito" style="width: 100%; height: 600px;">
-            </div>
-        </header>
-    </main>
+    <header > <!-- style="text-align: center;" -->
+        <div class="contenedor-prin">
+            <nav>
+                <h1>Fragancia  T</h1>
+                <ul class="menu">
+                    <li><a href="index.html"><p class="p-nav">Inicio</p></a></li>
+                    <li>
+                        <a><p class="p-nav">Catalogos</p></a>
+                        <ul class="submenu">
+                            <li><a href="catalogo_hombre.html"><p class="p-nav">Hombres</p></a></li>
+                            <li><a href="catalogo_mujeres.html"><p class="p-nav">Mujeres</p></a></li>
+                            <li><a href="catalogo_chamacos.html"><p class="p-nav">Niños</p></a></li>
+                        </ul>
+                    </li>
+                    <li><a href="sobre-nosotros/sobre_nosotros.html"><p class="p-nav">Sobre Nosotros</p></a></li>
+                    <li><a href="contacto/contactanos.html"><p class="p-nav">Contactanos</p></a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- <div id="fondo">
+            <img src="imagenes/logo_empresa.jpg" alt="archivo no cargado con exito" style="width: 100%; height: 600px;">
+        </div> -->
+    </header>
 
     <br>
     <div id="encabezado_catalogo">
