--- a/catalogo_hombre.html
+++ b/catalogo_hombre.html
@@ -12,22 +12,24 @@
 </head>
 <body bgcolor="gray">
     <header > <!-- style="text-align: center;" -->
-        <nav>
-            <h1>Fragancia T</h1>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li>
-                    <a>Catalogos</a>
-                    <ul class="submenu">
-                        <li><a href="catalogo_hombre.html">Hombres</a></li>
-                        <li><a href="catalogo_mujeres.html">Mujeres</a></li>
-                        <li><a href="catalogo_chamacos.html">Niños</a></li>
-                    </ul>
-                </li>
-                <li><a>Sobre Nosotros</a></li>
-                <li><a>Contactanos</a></li>
-            </ul>
-        </nav>
+        <div class="contenedor-prin">
+            <nav>
+                <h1>Fragancia  T</h1>
+                <ul class="menu">
+                    <li><a href="index.html"><p class="p-nav">Inicio</p></a></li>
+                    <li>
+                        <a><p class="p-nav">Catalogos</p></a>
+                        <ul class="submenu">
+                            <li><a href="catalogo_hombre.html"><p class="p-nav">Hombres</p></a></li>
+                            <li><a href="catalogo_mujeres.html"><p class="p-nav">Mujeres</p></a></li>
+                            <li><a href="catalogo_chamacos.html"><p class="p-nav">Niños</p></a></li>
+                        </ul>
+                    </li>
+                    <li><a href="sobre-nosotros/sobre_nosotros.html"><p class="p-nav">Sobre Nosotros</p></a></li>
+                    <li><a href="contacto/contactanos.html"><p class="p-nav">Contactanos</p></a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     
     <div id="division_catalogo">
