--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -57,5 +57,25 @@
         <fieldset style="background-color: white;"><img src="imagenes/img-niños/l13.png" alt="archivo no encontrado"><br><br>Nombre: Cuentos de Luna y Estrellas<br><br>Descripcion: Deja que la magia del universo abrace la piel de tu pequeño con esta loción celestial. 50ml<br><br>Precio: $7.99<br><br>Promocion: 3 X 20.99 <br><br><button>Comprar</button></fieldset>
         <fieldset style="background-color: white;"><img src="imagenes/img-niños/l14.png" alt="archivo no encontrado"><br><br>Nombre: Brillito de Luna y Mariposa<br><br>Descripcion: Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br>Precio: $8.99<br><br>Promocion: 3 X 25.99<br><br><button>Comprar</button></fieldset>
     </div>
+    <footer>
+        <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
+            <div id="parte1">
+            <div id="Footer1">
+            <h3>Acerca de la empresa</h3>
+            <p>Acerca de nosotros</p>
+            <p>Contactenos</p>
+            <p>Terminos y condiciones</p>
+            <p>Politica y privacidad</p>
+            </div>
+            <div id="Footer2">
+            <h3>Mas informacion</h3>
+            <img src="footer/facebook.png" alt="facebook">
+            <img src="footer/instagran.png" alt="Instagram">
+            <img src="footer/x.png" alt="X">
+            <img src="footer/whatsapp.png" alt="Whatsapp">
+            </div>
+            </div>
+
+    </footer>
 </body>
 </html>
