--- a/catalogo_hombre.html
+++ b/catalogo_hombre.html
@@ -57,5 +57,26 @@
         <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion3.png" alt="archivo no encontrado"><br><br>Nombre: Fragancia de Luna<br><br>Descripcion: Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br>Precio: $10.99<br><br>Promocion: 3 X $25.99<br><br><button style="margin-top:22%;">Comprar</button></fieldset>
         <fieldset style="background-color: white;"><img src="imagenes/locion hombres/losion4.png" alt="archivo no encontrado"><br><br>Nombre: Rocío del Amanecer<br><br>Descripcion: Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br>Precio: $14.99<br><br>Promocion: Locion + Frasco X $24.99<br><br><button>Comprar</button></fieldset>
     </div>
+    <footer>
+        <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
+            <div id="parte1">
+            <div id="Footer1">
+            <h3>Acerca de la empresa</h3>
+            <p>Acerca de nosotros</p>
+            <p>Contactenos</p>
+            <p>Terminos y condiciones</p>
+            <p>Politica y privacidad</p>
+            </div>
+            <div id="Footer2">
+            <h3>Mas informacion</h3>
+            <img src="footer/facebook.png" alt="facebook">
+            <img src="footer/instagran.png" alt="Instagram">
+            <img src="footer/x.png" alt="X">
+            <img src="footer/whatsapp.png" alt="Whatsapp">
+            </div>
+            </div>
+
+    </footer>
+</body>
 </body>
 </html>
