--- a/contacto/contactanos.html
+++ b/contacto/contactanos.html
@@ -62,10 +62,10 @@
             </div>
             <div id="Footer2">
             <h3>Mas informacion</h3>
-            <img src="img/facebook.png" alt="facebook">
-            <img src="img/instagran.png" alt="Instagram">
-            <img src="img/x.png" alt="X">
-            <img src="img/whatsapp.png" alt="Whatsapp">
+            <img class="footer-img"  src="img/facebook.png" alt="facebook">
+            <img class="footer-img"  src="img/instagran.png" alt="Instagram">
+            <img class="footer-img"  src="img/x.png" alt="X">
+            <img class="footer-img"  src="img/whatsapp.png" alt="Whatsapp">
             </div>
             </div>
 
