--- a/sobre-nosotros/sobre_nosotros.html
+++ b/sobre-nosotros/sobre_nosotros.html
@@ -121,10 +121,10 @@
                 </div>
                 <div id="Footer2">
                 <h3>Mas informacion</h3>
-                <img src="../footer/facebook.png" alt="facebook">
-                <img src="../footer/instagran.png" alt="Instagram">
-                <img src="../footer/x.png" alt="X">
-                <img src="../footer/whatsapp.png" alt="Whatsapp">
+                <img class="footer-img"  src="../footer/facebook.png" alt="facebook">
+                <img class="footer-img"  src="../footer/instagran.png" alt="Instagram">
+                <img class="footer-img"  src="../footer/x.png" alt="X">
+                <img class="footer-img"  src="../footer/whatsapp.png" alt="Whatsapp">
                 </div>
                 </div>
     
