--- a/sobre-nosotros/sobre_nosotros.html
+++ b/sobre-nosotros/sobre_nosotros.html
@@ -87,7 +87,7 @@
         <div class="imagenes">
           <img src="imagenes/Ivan1.jpeg".jpeg" alt="Imagen 1" style="width: 20%;" onclick="showDescription('Ivan')">
           <img src="imagenes/mau.jpg" alt="Imagen 2" style="width: 20%;" onclick="showDescription('Mauricio')">
-          <img src="Img/dayana.jpeg" alt="Imagen 3" style="width: 20%;" onclick="showDescription('Alejandro')">
+          <img src="imagenes/Alejandro.jpg" alt="Imagen 3" style="width: 20%;" onclick="showDescription('Alejandro')">
         </div>
         <div id="description"></div>
       </section>      
