--- a/formulario/formulario_compra.html
+++ b/formulario/formulario_compra.html
@@ -3,14 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comprar</title>
+    <link rel="stylesheet" href="formulario.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="c">
-        <div class="">
-
-        </div>
+    <div class="container-fluid">
+        <center>
+            <div id="div">
+                <form action="POST">
+                    <div class="row">
+                        <h2>Contacto</h2>
+                        <div class="col-md-12">
+                            <input class="col-md-12" type="text" placeholder="Correo electronico">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <h2>Entrega</h2>
+                        <div class="col-md-12">
+                            <select class="col-md-12">
+                                <option value="">Pais/Region</option>
+                                <option value="El salvador">El salvador</option>
+                                <option value="Guatemala">Guatemala</option>
+                                <option value="Honduras">Honduras</option>
+                            </select>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input class="col-md-12" type="text" placeholder="Nombre(opcional)">
+                        </div>
+                        <div class="col-md-6">
+                            <input class="col-md-12" type="text" placeholder="Apellido">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-9">
+                            <input class="col-md-12" type="text" placeholder="Direccion completa">
+                        </div>
+                        <div class="col-md-3">
+                            <input class="col-md-12" type="text" placeholder="Codigo postal">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <input class="col-md-12" type="text" placeholder="Telefono">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <h2>Pago</h2>
+                        <p><i>Todas las transacciones son seguras y estan encriptadas</i></p>
+                        <div class="col-md-12">
+                            <input type="radio">
+                            <label for="">Tarjeta de credito</label>
+                            <input type="radio" id="debito">
+                            <label for="">Tarjeta de debito</label>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <input class="col-md-12" type="password" placeholder="Numero de tarjeta">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6" style="display: flex; justify-content:right">
+                            <label class="col-md-6" for="">Fecha de vencimiento: </label>
+                            <input class="col-md-6" type="date" placeholder="Fecha de vencimiento">
+                        </div>
+                        <div class="col-md-6">
+                            <input class="col-md-12" type="password" placeholder="Codigo de seguridad">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <input class="col-md-12" type="password" placeholder="Nombre del titular">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12"><button class="btn btn-success col-md-12">Comprar ahora</button></div>
+                    </div>
+                </form>
+            </div>
+        </center>
     </div>
 </body>
 </html>
